--- a/mods/content/difficulty/frostiful.pw.toml
+++ b/mods/content/difficulty/frostiful.pw.toml
@@ -1,13 +1,13 @@
 name = "Frostiful"
-filename = "frostiful-1.0.7.jar"
+filename = "frostiful-1.0.8.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ae6qoBj3/versions/GyHfmfTn/frostiful-1.0.7.jar"
+url = "https://cdn.modrinth.com/data/Ae6qoBj3/versions/T0bK3sVQ/frostiful-1.0.8.jar"
 hash-format = "sha1"
-hash = "c2ffb011d5259de6120c66a1e3d4b2161a1845d4"
+hash = "a900348ab35f16737a805d5451d4808e93de20c6"
 
 [update]
 [update.modrinth]
 mod-id = "Ae6qoBj3"
-version = "GyHfmfTn"
+version = "T0bK3sVQ"
