--- a/mods/libraries/mc-vr-api.pw.toml
+++ b/mods/libraries/mc-vr-api.pw.toml
@@ -1,13 +1,13 @@
 name = "MC VR API"
-filename = "vrapi-3.0.7-1.20.1-fabric.jar"
+filename = "vrapi-3.0.8-1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/B3INNxum/versions/kDQURGlV/vrapi-3.0.7-1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/B3INNxum/versions/NX6XcTWs/vrapi-3.0.8-1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "d06dfd56560d20875edb36d80925d9bc48537bef"
+hash = "af4a980fc90f08417fbe4349c00e18d8a7ca6a9f"
 
 [update]
 [update.modrinth]
 mod-id = "B3INNxum"
-version = "kDQURGlV"
+version = "NX6XcTWs"
