--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.11.9-fabric.jar"
+filename = "moonlight-1.20-2.11.12-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/WOsQY4RE/moonlight-1.20-2.11.9-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/l53OchaO/moonlight-1.20-2.11.12-fabric.jar"
 hash-format = "sha1"
-hash = "87a3560cc34261e30b59549f64db97abe00b2cc9"
+hash = "c3caaa3cb34156df5dd718990c142b03d8510450"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "WOsQY4RE"
+version = "l53OchaO"
