--- a/mods/tweaks/interface/better-stats.pw.toml
+++ b/mods/tweaks/interface/better-stats.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Statistics Screen"
-filename = "betterstats-3.9.5+fabric-1.20.1.jar"
+filename = "betterstats-3.9.7+fabric-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/RLXEmLF9/betterstats-3.9.5%2Bfabric-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/L2ERNR7d/betterstats-3.9.7%2Bfabric-1.20.1.jar"
 hash-format = "sha1"
-hash = "9e70f4fc0e51fb83d40b7adc9fa09b184e0babcc"
+hash = "3fd85b69c3c5d46b23a1aa9327cf7f197b51f6aa"
 
 [update]
 [update.modrinth]
 mod-id = "n6PXGAoM"
-version = "RLXEmLF9"
+version = "L2ERNR7d"
