--- a/mods/utils/bluemap/bluemap-sign-markers.pw.toml
+++ b/mods/utils/bluemap/bluemap-sign-markers.pw.toml
@@ -1,13 +1,13 @@
 name = "BlueMap Sign Markers"
-filename = "bluemapsignmarkers-1.20.1-0.1.1.10.jar"
+filename = "bluemapsignmarkers-1.20.1-0.1.2.13.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/i5ZtmNIW/versions/ZLr8LIpw/bluemapsignmarkers-1.20.1-0.1.1.10.jar"
+url = "https://cdn.modrinth.com/data/i5ZtmNIW/versions/ue3yQUBe/bluemapsignmarkers-1.20.1-0.1.2.13.jar"
 hash-format = "sha1"
-hash = "908d41f080f9ed3806ca837cb460f28b6f9d8e15"
+hash = "8ab028fbe02303c5207a13db83a0754263abc0ce"
 
 [update]
 [update.modrinth]
 mod-id = "i5ZtmNIW"
-version = "ZLr8LIpw"
+version = "ue3yQUBe"
