--- a/mods/worldgen/moogs/mns-moogs-nether-structures.pw.toml
+++ b/mods/worldgen/moogs/mns-moogs-nether-structures.pw.toml
@@ -1,13 +1,13 @@
 name = "MNS - Moog's Nether Structures"
-filename = "mns-1.0-1.20-fabric.jar"
+filename = "mns-1.0.1-1.20-fabric.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/nGUXvjTa/versions/FCKzWzK8/mns-1.0-1.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/nGUXvjTa/versions/PTf5Y56P/mns-1.0.1-1.20-fabric.jar"
 hash-format = "sha1"
-hash = "d06e0d331f222b799f843cae13516b22fdacd876"
+hash = "e9dc691941c4f3ad16f21e406cd25ac221883b49"
 
 [update]
 [update.modrinth]
 mod-id = "nGUXvjTa"
-version = "FCKzWzK8"
+version = "PTf5Y56P"
