--- a/index.toml
+++ b/index.toml
@@ -60,6 +60,10 @@ file = "mods/emi/emi.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/balm.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/bclib.pw.toml"
 metafile = true
 
@@ -84,7 +88,15 @@ file = "mods/libraries/fabric-api.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/fabric-language-kotlin.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/forge-config-api-port.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/jamlib.pw.toml"
 metafile = true
 
 [[files]]
