--- a/index.toml
+++ b/index.toml
@@ -32,6 +32,10 @@ file = "mods/content/computer-craft/cc-tweaked.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/computer-craft/cc-vs.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/computer-craft/cccbridge.pw.toml"
 metafile = true
 
@@ -44,11 +48,19 @@ file = "mods/content/create/create-track-map.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/create/interactive.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/silly/moyai.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/content/silly/mystical-oak-tree.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/valkyrien-skies.pw.toml"
 metafile = true
 
 [[files]]
