--- a/mods/content/create/create-steam-n-rails.pw.toml
+++ b/mods/content/create/create-steam-n-rails.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Steam 'n' Rails"
-filename = "Steam_Rails-1.5.1+fabric-mc1.20.1.jar"
+filename = "Steam_Rails-1.6.4+fabric-mc1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ZzjhlDgM/versions/vVIvVuGn/Steam_Rails-1.5.1%2Bfabric-mc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/ZzjhlDgM/versions/AJ3IGl3n/Steam_Rails-1.6.4%2Bfabric-mc1.20.1.jar"
 hash-format = "sha1"
-hash = "221edeb669eef0c8c554f0b0cd35e915fa19cfca"
+hash = "6aebceb3b11005d9cf7255f26344e1c3a635c91c"
 
 [update]
 [update.modrinth]
 mod-id = "ZzjhlDgM"
-version = "vVIvVuGn"
+version = "AJ3IGl3n"
