--- a/index.toml
+++ b/index.toml
@@ -80,6 +80,10 @@ file = "mods/emi/emi.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/interactive.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/balm.pw.toml"
 metafile = true
 
