--- a/index.toml
+++ b/index.toml
@@ -60,6 +60,10 @@ file = "mods/content/furniture/dramatic-doors.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/other/mighty-mail-fabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/silly/moyai.pw.toml"
 metafile = true
 
