--- a/index.toml
+++ b/index.toml
@@ -308,6 +308,10 @@ file = "mods/tweaks/gameplay/rightclickharvest.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/rolling-down-in-the-deep.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/simple-cobblestone-generator.pw.toml"
 metafile = true
 
