--- a/index.toml
+++ b/index.toml
@@ -234,6 +234,14 @@ file = "mods/libraries/jamlib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/konkrete.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/melody.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/midnightlib.pw.toml"
 metafile = true
 
