--- a/mods/tweaks/gameplay/double-doors.pw.toml
+++ b/mods/tweaks/gameplay/double-doors.pw.toml
@@ -1,13 +1,13 @@
 name = "Double Doors"
-filename = "doubledoors-1.20.1-5.4.jar"
+filename = "doubledoors-1.20.1-5.7.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/JrvR9OHr/versions/jQ5ZvTEg/doubledoors-1.20.1-5.4.jar"
+url = "https://cdn.modrinth.com/data/JrvR9OHr/versions/noOLikKt/doubledoors-1.20.1-5.7.jar"
 hash-format = "sha1"
-hash = "49d231d85242fbd6a6e3ac212ed03837f157114e"
+hash = "55f40cd02a532da700170ff026045f84e1e977bd"
 
 [update]
 [update.modrinth]
 mod-id = "JrvR9OHr"
-version = "jQ5ZvTEg"
+version = "noOLikKt"
