--- a/mods/tweaks/hud/chat-heads.pw.toml
+++ b/mods/tweaks/hud/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.10.32-fabric-1.20.jar"
+filename = "chat_heads-0.12.2-fabric-1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/4K8eZZjm/chat_heads-0.10.32-fabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/JY2IAuhd/chat_heads-0.12.2-fabric-1.20.jar"
 hash-format = "sha1"
-hash = "8b4a0e1cce7e710e0edfab753efa72bd4244ceab"
+hash = "bf195a306aa59c765590c7f654f6c6bdeea6cf02"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "4K8eZZjm"
+version = "JY2IAuhd"
