--- a/index.toml
+++ b/index.toml
@@ -218,6 +218,10 @@ file = "mods/libraries/botarium.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/cardinal-components-api.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/cicada.pw.toml"
 metafile = true
 
@@ -287,6 +291,14 @@ metafile = true
 
 [[files]]
 file = "mods/libraries/moonlight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/patchouli.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/paucal.pw.toml"
 metafile = true
 
 [[files]]
@@ -531,6 +543,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/inventory/norecipebook-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/inventory/patchoulibutton.pw.toml"
 metafile = true
 
 [[files]]
