--- a/index.toml
+++ b/index.toml
@@ -19,6 +19,9 @@ file = "config/builtinservers.json"
 file = "config/collective/checked.txt"
 
 [[files]]
+file = "config/defaultoptions/keybindings.txt"
+
+[[files]]
 file = "config/expanded_ecosphere/config.json5"
 
 [[files]]
@@ -44,6 +47,14 @@ file = "config/fancymenu/minecraftwindow/icons/icon32x32.png"
 
 [[files]]
 file = "config/fancymenu/options.txt"
+
+[[files]]
+file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
+metafile = true
+
+[[files]]
+file = "config/paxi/resourcepacks/creeper-overhaul-overhaul.pw.toml"
+metafile = true
 
 [[files]]
 file = "mods/content/applied-energistics/ae2-qol-recipes.pw.toml"
@@ -338,7 +349,15 @@ file = "mods/tweaks/audio/plasmo-voice.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/audio/presence-footsteps.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/pv-addon-sculk.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/audio/sound.pw.toml"
 metafile = true
 
 [[files]]
@@ -402,7 +421,19 @@ file = "mods/tweaks/gameplay/kleeslabs.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/lootr.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/netherportalfix.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/polymorph.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/polymorphic-energistics.pw.toml"
 metafile = true
 
 [[files]]
@@ -422,6 +453,10 @@ file = "mods/tweaks/gameplay/smarter-farmers-farmers-replant.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/snow-under-trees-remastered.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/treechop.pw.toml"
 metafile = true
 
@@ -430,11 +465,19 @@ file = "mods/tweaks/gameplay/yigd.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/hud/appleskin.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/hud/chat-heads.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/tweaks/hud/dcch.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/hud/emojiful.pw.toml"
 metafile = true
 
 [[files]]
@@ -466,6 +509,14 @@ file = "mods/tweaks/hud/status-effect-bars.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/hud/travelers-titles.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/interface/advancement-plaques.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/interface/auth-me.pw.toml"
 metafile = true
 
@@ -491,6 +542,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/interface/dcwa.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/interface/default-options.pw.toml"
 metafile = true
 
 [[files]]
@@ -538,6 +593,14 @@ file = "mods/tweaks/inventory/ae2-mousetweaks-fix.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/inventory/idwtialsimmoedm.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/inventory/mindful-darkness.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/inventory/mouse-tweaks.pw.toml"
 metafile = true
 
@@ -551,6 +614,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/inventory/shulkerboxtooltip.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/inventory/tooltipfix.pw.toml"
 metafile = true
 
 [[files]]
@@ -634,6 +701,10 @@ file = "mods/tweaks/performance/vmp-fabric.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/visual/ambient-environment.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/visual/bobby.pw.toml"
 metafile = true
 
@@ -650,7 +721,15 @@ file = "mods/tweaks/visual/fallingleaves.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/visual/highlight.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/visual/lambdynamiclights.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/visual/potionparticlepack.pw.toml"
 metafile = true
 
 [[files]]
