Missing deps and updates

--- a/mods/tweaks/gameplay/snow-under-trees-remastered.pw.toml
+++ b/mods/tweaks/gameplay/snow-under-trees-remastered.pw.toml
@@ -1,13 +1,13 @@
 name = "Snow Under Trees (Fabric)"
-filename = "SnowUnderTrees-2.2.0+1.20.1.jar"
+filename = "SnowUnderTrees-2.3.0+1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/XVnUIUAQ/versions/aiVMDtzu/SnowUnderTrees-2.2.0%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/XVnUIUAQ/versions/UyuF1UsW/SnowUnderTrees-2.3.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "eb844399eb864d5667133ea18d2f34ad61486757"
+hash = "3f21a7c30d181aa9e61e0c63fc6ebb44d339bf28"
 
 [update]
 [update.modrinth]
 mod-id = "XVnUIUAQ"
-version = "aiVMDtzu"
+version = "UyuF1UsW"
