--- a/index.toml
+++ b/index.toml
@@ -281,6 +281,10 @@ file = "mods/libraries/geckolib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/iceberg.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/jamlib.pw.toml"
 metafile = true
 
@@ -302,6 +306,10 @@ metafile = true
 
 [[files]]
 file = "mods/libraries/moonlight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/libraries/mru.pw.toml"
 metafile = true
 
 [[files]]
