--- a/mods/tweaks/audio/presence-footsteps.pw.toml
+++ b/mods/tweaks/audio/presence-footsteps.pw.toml
@@ -1,13 +1,13 @@
 name = "Presence Footsteps"
-filename = "PresenceFootsteps-1.9.1.jar"
+filename = "PresenceFootsteps-1.9.4+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/rcTfTZr3/versions/pOCYcZUF/PresenceFootsteps-1.9.1.jar"
+url = "https://cdn.modrinth.com/data/rcTfTZr3/versions/LjDXTyEn/PresenceFootsteps-1.9.4%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "e2c171536c326079b46a1f9c7d115f196dade772"
+hash = "f4b446c7153bf6dbe41b7f3325686e3dd630dff1"
 
 [update]
 [update.modrinth]
 mod-id = "rcTfTZr3"
-version = "pOCYcZUF"
+version = "LjDXTyEn"
