--- a/index.toml
+++ b/index.toml
@@ -221,6 +221,10 @@ file = "mods/emi/emi.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/architectury-api.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/balm.pw.toml"
 metafile = true
 
