--- a/index.toml
+++ b/index.toml
@@ -84,6 +84,10 @@ file = "mods/content/computer-craft/ducky-periphs.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/computer-craft/plethora-peripherals.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/create/bellsandwhistles.pw.toml"
 metafile = true
 
@@ -113,6 +117,10 @@ metafile = true
 
 [[files]]
 file = "mods/content/create/interiors.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/decoration/advancement-frames.pw.toml"
 metafile = true
 
 [[files]]
@@ -220,7 +228,27 @@ file = "mods/emi/ae2-emi-crafting.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/emi/emi-enchanting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/emi/emi-ores.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/emi/emi.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/emi/emiffect.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/emi/emitrades.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/emi/extra-mod-integrations.pw.toml"
 metafile = true
 
 [[files]]
@@ -392,11 +420,23 @@ file = "mods/tweaks/building/diagonal-windows.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/accelerated-decay.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/advancement-screenshot.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/armor-statues.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/better-third-person.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/bettersmithingtable.pw.toml"
 metafile = true
 
 [[files]]
@@ -461,6 +501,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/rolling-down-in-the-deep.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/scaffolding-drops-nearby.pw.toml"
 metafile = true
 
 [[files]]
@@ -728,7 +772,15 @@ file = "mods/tweaks/visual/ambient-environment.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/visual/better-falling-block-particles.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/visual/bobby.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/visual/cave-dust.pw.toml"
 metafile = true
 
 [[files]]
@@ -752,6 +804,10 @@ file = "mods/tweaks/visual/lambdynamiclights.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/visual/let-sleeping-dogs-lie.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/visual/potionparticlepack.pw.toml"
 metafile = true
 
@@ -761,6 +817,34 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/visual/what-are-they-up-to.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/chunky.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/fastback.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/invview.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/nsmp-discord-bridge.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/nsmp-restarter.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/spark.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/utils/stackdeobf.pw.toml"
 metafile = true
 
 [[files]]
