--- a/mods/emi/extra-mod-integrations.pw.toml
+++ b/mods/emi/extra-mod-integrations.pw.toml
@@ -1,13 +1,13 @@
 name = "EMI Addon: Extra Mod Integrations"
-filename = "extra-mod-integrations-0.4.3+1.20.1.jar"
+filename = "extra-mod-integrations-0.4.6+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/bpRHnWUb/versions/YSn9Of5z/extra-mod-integrations-0.4.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/bpRHnWUb/versions/IobIopQf/extra-mod-integrations-0.4.6%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "47c75646fb72a96a0cf4405a8247903026c2dfc7"
+hash = "c0891c46d0c5cad99df98095a8c0092a6facc6fe"
 
 [update]
 [update.modrinth]
 mod-id = "bpRHnWUb"
-version = "YSn9Of5z"
+version = "IobIopQf"
