--- a/mods/content/decoration/advancement-frames.pw.toml
+++ b/mods/content/decoration/advancement-frames.pw.toml
@@ -1,13 +1,13 @@
 name = "Advancement Frames"
-filename = "advancementframes-1.20-2.2.6-fabric.jar"
+filename = "advancementframes-1.20-2.2.7-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/zUBn5hHr/versions/o46bOKal/advancementframes-1.20-2.2.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/zUBn5hHr/versions/DxfoqvJs/advancementframes-1.20-2.2.7-fabric.jar"
 hash-format = "sha1"
-hash = "ed40dbb0f3087a0de30296799ccc62627ad6566f"
+hash = "654094927931a1a936111f3d4cee65f237dab3b2"
 
 [update]
 [update.modrinth]
 mod-id = "zUBn5hHr"
-version = "o46bOKal"
+version = "DxfoqvJs"
