--- a/mods/tweaks/visual/fabricbettergrass.pw.toml
+++ b/mods/tweaks/visual/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.4+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.5+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/rfpF5kC8/FabricBetterGrass-1.0.4%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/yopKMemL/FabricBetterGrass-1.0.5%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "a8eaf062a667b3c7da23671e8250a7d678cf21c0"
+hash = "6a58fdbbe7061644650c14d74d899d1df5c325fa"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "rfpF5kC8"
+version = "yopKMemL"
