--- a/mods/content/supplementaries/amendments.pw.toml
+++ b/mods/content/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "amendments"
-filename = "amendments-1.20-1.2.3-fabric.jar"
+filename = "amendments-1.20-1.2.4-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/QfmflHLE/amendments-1.20-1.2.3-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/y8OZApVk/amendments-1.20-1.2.4-fabric.jar"
 hash-format = "sha1"
-hash = "ba69294bed6a2a8692e105c80f5fe0a9625c9994"
+hash = "8a98f8ef69e538c20d6fb02cc015a43435f3edb8"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "QfmflHLE"
+version = "y8OZApVk"
