--- a/mods/tweaks/visual/fabricbettergrass.pw.toml
+++ b/mods/tweaks/visual/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.5+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.8+1.20.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/yopKMemL/FabricBetterGrass-1.0.5%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/2zyGe46S/FabricBetterGrass-1.0.8%2B1.20.6.jar"
 hash-format = "sha1"
-hash = "6a58fdbbe7061644650c14d74d899d1df5c325fa"
+hash = "febf144a95bedd2ad7bc8391312f2a906fcb60d3"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "yopKMemL"
+version = "2zyGe46S"
