--- a/index.toml
+++ b/index.toml
@@ -468,6 +468,10 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/audio/dynamicsurroundingsfabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/plasmo-voice.pw.toml"
 metafile = true
 
@@ -505,6 +509,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/armor-statues.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/better-climbing.pw.toml"
 metafile = true
 
 [[files]]
