--- a/index.toml
+++ b/index.toml
@@ -100,6 +100,10 @@ file = "mods/content/computer-craft/toms-peripherals.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/computer-craft/unlimitedperipheralworks.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/create/bellsandwhistles.pw.toml"
 metafile = true
 
@@ -120,6 +124,10 @@ file = "mods/content/create/create-fabric.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/create/create-garnished.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/create/create-railways-navigator.pw.toml"
 metafile = true
 
@@ -137,6 +145,10 @@ metafile = true
 
 [[files]]
 file = "mods/content/create/interiors.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/create/slice-and-dice.pw.toml"
 metafile = true
 
 [[files]]
@@ -172,7 +184,47 @@ file = "mods/content/decoration/windchimes.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/farmers-delight/brewin-and-chewin-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/crate-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/create-food.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/ends-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/expanded-delight.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/farmers-delight/farmers-delight-refabricated.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/farmers-knives.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/frights-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/more-delight.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/nethers-delight-refabricated.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/farmers-delight/ubes-delight.pw.toml"
 metafile = true
 
 [[files]]
@@ -204,7 +256,19 @@ file = "mods/content/mobs/creeper-overhaul.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/mobs/duckling.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/enderman-overhaul.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/friends-and-foes-flowery-mooblooms-fabric.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/friends-and-foes.pw.toml"
 metafile = true
 
 [[files]]
@@ -213,6 +277,14 @@ metafile = true
 
 [[files]]
 file = "mods/content/mobs/more-mob-variants.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/wolves-of-other-furs.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/ydms-red-panda.pw.toml"
 metafile = true
 
 [[files]]
@@ -444,6 +516,10 @@ file = "mods/libraries/pehkui.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/peripheralium.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/puzzles-lib.pw.toml"
 metafile = true
 
@@ -637,6 +713,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/hud/modelfix.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/hud/now-playing.pw.toml"
 metafile = true
 
 [[files]]
