--- a/mods/content/create/create-garnished.pw.toml
+++ b/mods/content/create/create-garnished.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Garnished"
-filename = "garnished-1.6.3+1.20.1.jar"
+filename = "garnished-1.8.3+1.20.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/KbCwX87k/garnished-1.6.3%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/6e2SlzR4/versions/xM9frhZm/garnished-1.8.3%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "0f7c38a62bb38ace4c75f38f9661352e2b20e23b"
+hash = "9364719c31722febbcfad4693efc5838c30f93a4"
 
 [update]
 [update.modrinth]
 mod-id = "6e2SlzR4"
-version = "KbCwX87k"
+version = "xM9frhZm"
