--- a/mods/libraries/pehkui.pw.toml
+++ b/mods/libraries/pehkui.pw.toml
@@ -1,13 +1,13 @@
 name = "Pehkui"
-filename = "Pehkui-3.8.2+1.14.4-1.20.6.jar"
+filename = "Pehkui-3.8.3+1.14.4-1.21.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/smQAtVRG/Pehkui-3.8.2%2B1.14.4-1.20.6.jar"
+url = "https://cdn.modrinth.com/data/t5W7Jfwy/versions/6fzxx6SC/Pehkui-3.8.3%2B1.14.4-1.21.jar"
 hash-format = "sha1"
-hash = "036e7ad3fcf4ba209637939b1010b83b3cafdcb4"
+hash = "3ce548910f0aa2cef79dc333982493ccf8d73a3e"
 
 [update]
 [update.modrinth]
 mod-id = "t5W7Jfwy"
-version = "smQAtVRG"
+version = "6fzxx6SC"
