--- a/mods/content/farmers-delight/cultural-delights-fabric.pw.toml
+++ b/mods/content/farmers-delight/cultural-delights-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Cultural Delights [Fabric]"
-filename = "cultural-delights-fabric-0.14.12+1.20.1.jar"
+filename = "cultural-delights-fabric-1.0.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/9Gy8sTXS/versions/bfK7P3Ja/cultural-delights-fabric-0.14.12%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/9Gy8sTXS/versions/wuncu1oK/cultural-delights-fabric-1.0.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "b678206fa46da19df7bf02cb64f8f2e99936f3d1"
+hash = "b68bbc3461a6670264ee3bc52f1e346df2b42486"
 
 [update]
 [update.modrinth]
 mod-id = "9Gy8sTXS"
-version = "bfK7P3Ja"
+version = "wuncu1oK"
