--- a/mods/tweaks/performance/badoptimizations.pw.toml
+++ b/mods/tweaks/performance/badoptimizations.pw.toml
@@ -1,13 +1,13 @@
 name = "BadOptimizations"
-filename = "BadOptimizations-2.1.1.jar"
+filename = "BadOptimizations-2.1.2-1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/eT6Jsaq5/BadOptimizations-2.1.1.jar"
+url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/V222vBVT/BadOptimizations-2.1.2-1.20.1.jar"
 hash-format = "sha1"
-hash = "6c42358ecd765bd9372d3e69a1363ca4eeeb55a3"
+hash = "f6cd7b5ca2589634b3f370d2dd12721e09fdb6b7"
 
 [update]
 [update.modrinth]
 mod-id = "g96Z4WVZ"
-version = "eT6Jsaq5"
+version = "V222vBVT"
