--- a/mods/utils/bluemap/bluemap-offline-player-markers-(fabric).pw.toml
+++ b/mods/utils/bluemap/bluemap-offline-player-markers-(fabric).pw.toml
@@ -1,13 +1,13 @@
 name = "BlueMap Offline Player Markers (Fabric)"
-filename = "bluemap-offline-player-markers-2.6-fabric.jar"
+filename = "bluemap-offline-player-markers-3.0.1-fabric.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/4h9u0qdE/versions/RValw3NJ/bluemap-offline-player-markers-2.6-fabric.jar"
+url = "https://cdn.modrinth.com/data/4h9u0qdE/versions/zsPcTTAp/bluemap-offline-player-markers-3.0.1-fabric.jar"
 hash-format = "sha1"
-hash = "51deed10767ef4d6f62ac919780661cf7e56064c"
+hash = "1bac720dab6210326045149e2160495205951000"
 
 [update]
 [update.modrinth]
 mod-id = "4h9u0qdE"
-version = "RValw3NJ"
+version = "zsPcTTAp"
