--- a/mods/utils/bluemap/bluemap-sign-markers.pw.toml
+++ b/mods/utils/bluemap/bluemap-sign-markers.pw.toml
@@ -1,13 +1,13 @@
 name = "BlueMap Sign Markers"
-filename = "bluemapsignmarkers-1.20.1-0.1.2.13.jar"
+filename = "bluemapsignmarkers-1.20.1-0.2.3.20.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/i5ZtmNIW/versions/ue3yQUBe/bluemapsignmarkers-1.20.1-0.1.2.13.jar"
+url = "https://cdn.modrinth.com/data/i5ZtmNIW/versions/z3yB40sT/bluemapsignmarkers-1.20.1-0.2.3.20.jar"
 hash-format = "sha1"
-hash = "8ab028fbe02303c5207a13db83a0754263abc0ce"
+hash = "22e44d7cce634e9bf6d1ca29b40d59f35d9d1dfd"
 
 [update]
 [update.modrinth]
 mod-id = "i5ZtmNIW"
-version = "ue3yQUBe"
+version = "z3yB40sT"
